fix(navigation-primary): more spacing tweaks

--- a/elements/rh-navigation-primary/rh-navigation-primary-lightdom.css
+++ b/elements/rh-navigation-primary/rh-navigation-primary-lightdom.css
@@ -33,6 +33,10 @@ rh-navigation-primary {
       }
 
       &:nth-child(1 of rh-navigation-item[slot='links']) {
+        &::part(container) {
+          padding-inline-start: 0;
+        }
+
         & a {
           margin-inline-start: 0;
         }
@@ -41,6 +45,10 @@ rh-navigation-primary {
       &:nth-last-child(1 of rh-navigation-item[slot='links']) {
         &:after {
           border-inline-end-color: transparent;
+        }
+
+        &::part(container) {
+          padding-inline-end: 0;
         }
 
         & a {
